# rawstudio

./: .gitignore  .gitmodules  .travis.yml  .version  AUTHORS  HACKING  Makefile.am  NEWS  README  README.md  REQUIREMENTS  TODO  ac_openmp.m4  autogen.sh  configure.ac  configure.in  gettext.h  rawstudio.appdata.xml  rawstudio.desktop
librawstudio/: Makefile.am  conf_interface.c  conf_interface.h  gettext.h  lens_fix.xml  null.c  null.h  rawstudio-2.1.pc.in  rawstudio.h  rs-1d-function.c  rs-1d-function.h  rs-adobe-coeff.c  rs-adobe-coeff.h  rs-color-space-icc.c  rs-color-space-icc.h  rs-color-space-selector.c  rs-color-space-selector.h  rs-color-space.c  rs-color-space.h  rs-color-transform.h  rs-color.c  rs-color.h  rs-curve.c  rs-curve.h  rs-dcp-file.c  rs-dcp-file.h  rs-debug.c  rs-debug.h  rs-exif.cc  rs-exif.h  rs-filetypes.c  rs-filetypes.h  rs-filter-param.c  rs-filter-param.h  rs-filter-request.c  rs-filter-request.h  rs-filter-response.c  rs-filter-response.h  rs-filter.c  rs-filter.h  (+68 more)
pixmaps/: Makefile.am
plugins/: Makefile.am
plugins/basic-render/: Makefile.am  basic-render.c
plugins/cache/: Makefile.am  cache.c
plugins/colorspace-adobergb/: Makefile.am  colorspace-adobergb.c
plugins/colorspace-prophoto/: Makefile.am  colorspace-prophoto.c
plugins/colorspace-srgb/: Makefile.am  colorspace-srgb.c
plugins/colorspace-transform/: Makefile.am  colorspace_transform.c  colorspace_transform.h  colorspace_transform_avx.c  colorspace_transform_sse2.c  rs-cmm.c  rs-cmm.h
plugins/crop/: Makefile.am  crop.c
plugins/dcp/: Makefile.am  adobe-camera-raw-tone.h  dcp-avx.c  dcp-sse2.c  dcp-sse4.c  dcp.c  dcp.h
plugins/demosaic/: Makefile.am  demosaic.c
plugins/denoise/: Makefile.am  complexblock.cpp  complexblock.h  complexfilter-x86.cpp  complexfilter.cpp  complexfilter.h  denoise.c  denoiseinterface.h  denoisethread.cpp  denoisethread.h  fftdenoiser.cpp  fftdenoiser.h  fftdenoiseryuv.cpp  fftdenoiseryuv.h  fftwindow.cpp  fftwindow.h  floatimageplane.cpp  floatimageplane.h  floatplanarimage-x86.cpp  floatplanarimage.cpp  floatplanarimage.h  jobqueue.cpp  jobqueue.h  planarimageslice.cpp  planarimageslice.h
plugins/exposure-mask/: Makefile.am  exposure-mask.c
plugins/fuji-rotate/: Makefile.am  fuji-rotate.c
plugins/gtk-view/: Makefile.am  gtk-view.c
plugins/input-file/: Makefile.am  input-file.c
plugins/input-image16/: Makefile.am  input-image16.c
plugins/lensfun/: Makefile.am  lensfun-avx.c  lensfun-sse2.c  lensfun-version.c  lensfun-version.h  lensfun.c
plugins/load-dcraw/: Makefile.am  dcraw.cc  dcraw.h  dcraw_api.cc  dcraw_api.h  dcraw_indi.c  dcrawloader.c  mmap-hack.c  mmap-hack.h  nikon_curve.c  nikon_curve.h  uf_glib.h  uf_progress.h  ufobject.cc  ufobject.h  ufraw-batch.c  ufraw.h  ufraw_colorspaces.c  ufraw_colorspaces.h  ufraw_conf.c  ufraw_developer.c  ufraw_embedded.c  ufraw_exiv2.cc  ufraw_message.c  ufraw_routines.c  ufraw_settings.cc  ufraw_ufraw.c  ufraw_writer.c  wb_presets.c
plugins/load-gdk/: Makefile.am  exiv2-colorspace.cpp  exiv2-colorspace.h  load-gdk.c
plugins/load-png/: Makefile.am  load-png.c
plugins/load-rawspeed/: .gitignore  .travis.yml  Makefile.am  rawstudio-plugin-api.cpp  rawstudio-plugin-api.h  rawstudio-plugin.c
plugins/matrix-multiplier/: Makefile.am  matrix-multiplier.c
plugins/meta-ciff/: Makefile.am  ciff-meta.c
plugins/meta-exiv2/: Makefile.am  exiv2-metadata.cpp  exiv2-metadata.h
plugins/meta-mrw/: Makefile.am  mrw-meta.c
plugins/meta-raf/: Makefile.am  raf-meta.c
plugins/meta-tiff/: Makefile.am  tiff-meta.c
plugins/meta-x3f/: Makefile.am  x3f-meta.c
plugins/output-facebook/: Makefile.am  facebook.c  facebook.h  output-facebook.c  output-facebook.h  rs-facebook-client-param.c  rs-facebook-client-param.h  rs-facebook-client.c  rs-facebook-client.h
plugins/output-flickr/: Makefile.am  output-flickr.c  output-flickr.h
plugins/output-jpegfile/: Makefile.am  output-jpegfile.c
plugins/output-picasa/: Makefile.am  output-picasa.c  rs-picasa-client.c  rs-picasa-client.h
plugins/output-pngfile/: Makefile.am  output-pngfile.c
plugins/output-tifffile/: Makefile.am  output-tifffile.c
profiles/: AGFAPHOTO_DC-833m-simple.dcp  Apple_QuickTake-simple.dcp  Blackmagic_Pocket_Cinema_Camera-simple.dcp  CASIO_EX-S20-simple.dcp  CASIO_EX-Z750-simple.dcp  CINE-simple.dcp  CINE_650-simple.dcp  CINE_660-simple.dcp  Canon_EOS-1D-simple.dcp  Canon_EOS-1DS-simple.dcp  Canon_EOS-1D_C-simple.dcp  Canon_EOS-1D_Mark_II-simple.dcp  Canon_EOS-1D_Mark_III-simple.dcp  Canon_EOS-1D_Mark_III_Rawstudio_Advanced_Profile.dcp  Canon_EOS-1D_Mark_II_N-simple.dcp  Canon_EOS-1D_Mark_IV-simple.dcp  Canon_EOS-1D_X-simple.dcp  Canon_EOS-1Ds_Mark_II-simple.dcp  Canon_EOS-1Ds_Mark_III-simple.dcp  Canon_EOS-simple.dcp  Canon_EOS_1000D-simple.dcp  Canon_EOS_1000D_Rawstudio_Advanced_Profile.dcp  Canon_EOS_100D-simple.dcp  Canon_EOS_10D-simple.dcp  Canon_EOS_1100D-simple.dcp  Canon_EOS_1100D_Rawstudio_Advanced_Profile.dcp  Canon_EOS_20D-simple.dcp  Canon_EOS_20Da-simple.dcp  Canon_EOS_300D-simple.dcp  Canon_EOS_30D-simple.dcp  Canon_EOS_350D-simple.dcp  Canon_EOS_400D-simple.dcp  Canon_EOS_400D_Rawstudio_Advanced_Profile.dcp  Canon_EOS_40D-simple.dcp  Canon_EOS_40D_Rawstudio_Advanced_Profile.dcp  Canon_EOS_450D-simple.dcp  Canon_EOS_500D-simple.dcp  Canon_EOS_50D-simple.dcp  Canon_EOS_50D_Rawstudio_Advanced_Profile.dcp  Canon_EOS_550D-simple.dcp  (+447 more)
src/: Makefile  Makefile.am  adobe-coeff.c  adobe-coeff.h  application.c  application.h  arch-generic.c  arch-x86.c  ciff-meta.c  ciff-meta.h  color.h  conf_interface.c  conf_interface.h  dcraw.c  dcraw.cc  dcraw.h  dcraw_api.c  dcraw_api.cc  dcraw_api.h  drawingarea.c  drawingarea.h  eog-pixbuf-cell-renderer.c  eog-pixbuf-cell-renderer.h  filename.c  filename.h  gconf_interface.h  gettext.h  gtk-helper.c  gtk-helper.h  gtk-interface.c  gtk-interface.h  gtk-progress.c  gtk-progress.h  gtk-save-dialog.c  gtk-save-dialog.h  matrix.c  matrix.h  mmap-hack.c  mmap-hack.h  mrw-meta.c  (+90 more)
trunk/: .version  AUTHORS  Makefile.am  NEWS  REQUIREMENTS  TODO  configure.in  rawstudio.desktop
(+1424 files in other folders)
