dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(rawstudio, 0.7)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_CXX
AC_HEADER_STDC

AC_ARG_ENABLE(experimental, 
	AS_HELP_STRING(
		[--enable-experimental],
		[Enable experimental code (default: disabled)]),
	[EXPERIMENTAL=yes]
)

if test "$EXPERIMENTAL" == "yes"; then
	AC_DEFINE([EXPERIMENTAL],[1],[Enable experimental code])
fi

dnl libjpeg
if test -z "$LIBJPEG"; then
  AC_CHECK_LIB(jpeg, jpeg_destroy_decompress, jpeg_ok=yes, jpeg_ok=no)
  if test "$jpeg_ok" = yes; then
    AC_CHECK_HEADER(jpeglib.h, jpeg_ok=yes, jpeg_ok=no)
    if test "$jpeg_ok" = yes; then
      LIBJPEG='-ljpeg'
    else
      AC_MSG_ERROR([*** JPEG header files not found.])
    fi
  else
    AC_MSG_ERROR([*** Rawstudio requires libjpeg.])
  fi
fi
AC_SUBST(LIBJPEG)

dnl libtiff
if test -z "$LIBTIFF"; then
AC_CHECK_LIB(tiff, TIFFOpen, tiff_ok=yes, tiff_ok=no)
  if test "$tiff_ok" = yes; then
    AC_CHECK_HEADER(tiffio.h, tiff_ok=yes, tiff_ok=no)
    if test "$tiff_ok" = yes; then
      LIBTIFF='-ltiff'
    else
      AC_MSG_ERROR([*** libtiff header files not found.])
    fi
  else
    AC_MSG_ERROR([*** Rawstudio requires libtiff.])
  fi
fi
AC_SUBST(LIBTIFF)

pkg_modules="gtk+-2.0 >= 2.0.0 libxml-2.0 >= 2.4 gconf-2.0 >= 2.0 lcms dbus-1"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=rawstudio
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS="cz da de en fr it nb pl ru fi"
AM_GLIB_GNU_GETTEXT
AC_CHECK_FUNCS(memmem)

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
pixmaps/Makefile
])

