icondir = $(datadir)/pixmaps
icon_DATA = rawstudio.png

gfxdir = $(datadir)/pixmaps/rawstudio
gfx_DATA = rawstudio/overlay_deleted.png rawstudio/overlay_unprioritized.png rawstudio/overlay_priority1.png rawstudio/overlay_priority2.png rawstudio/overlay_priority3.png

EXTRA_DIST = $(icon_DATA) $(gfx_DATA) artwork.license
