SUBDIRS = \
	basic-render \
	cache \
	colorspace-adobergb \
	colorspace-prophoto \
	colorspace-srgb \
	colorspace-transform \
	crop \
	dcp \
	demosaic \
	denoise \
	exposure-mask \
	input-file \
	input-image16 \
	lensfun \
	load-dcraw \
	load-gdk \
	load-rawspeed \
	meta-ciff \
	meta-mrw \
	meta-raf \
	meta-tiff \
	meta-x3f \
	output-jpegfile \
	output-facebook \
	output-flickr \
	output-pngfile \
	output-tifffile \
	resample \
	rotate
